<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:key="agps_preferences">

		<PreferenceScreen
				android:title="@string/moreScreenTitle"
				android:summary="@string/moreScreenSummary"
				android:key="screen_preference">
				<Preference
						android:title="@string/AboutPrefTitle"
						android:summary="@string/AboutPrefSummary"
						android:key="about_app_key" />
				<Preference
						android:title="@string/VisitDGcomTitle"
						android:summary="@string/VisitDVcomSummary"
						android:key="vist_dg">
						<intent
								android:action="android.intent.action.VIEW"
								android:data="http://derekgordon.com/android-how-tos/a-gps-worldwide-patch" />
				</Preference>
				<Preference
						android:title="@string/VisitXdaTitle"
						android:summary="@string/VisitXdaSummary"
						android:key="visit_xda">
						<intent
								android:action="android.intent.action.VIEW"
								android:data="http://forum.xda-developers.com/sitesearch.php?q=%22aGPS%20Patch%22%2B%22GET%20BACK%22" />
				</Preference>
		</PreferenceScreen>
		
		<Preference
		android:title="@string/RestoreTitle"
		android:summary="@string/RestoreSummary"
		android:key="restore_key">
		</Preference>
		
		<CheckBoxPreference
		android:title="@string/PrefWelcomeTitle"
		android:summary="@string/PrefWelcomeSummary"
		android:defaultValue="true"
		android:key="showFirstUse">
		</CheckBoxPreference>

</PreferenceScreen>
