<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:padding="4dip"
		android:gravity="center_horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:id="@+id/parentViewConfirmDialog">

		<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal">

				<ImageView
						android:id="@+id/ivBillingHeader"
						android:src="@drawable/ic_launcher"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" />
				<TextView
						android:id="@+id/headerAppName"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_toRightOf="@+id/ivBillingHeader"
						android:text="@string/app_name"
						style="@style/text_h2"
						android:layout_marginTop="5dip"
						android:textAppearance="?android:attr/textAppearanceMedium" />
				<TextView
						android:id="@+id/headerUserName"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_toRightOf="@+id/ivBillingHeader"
						android:text="@string/CommonUser"
						style="@style/text_h3"
						android:layout_marginTop="30dip"
						android:layout_marginLeft="20dip"
						android:textAppearance="?android:attr/textAppearanceMedium" />

		</RelativeLayout>



		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center"
				android:id="@+id/screen_billing"
				android:visibility="visible"
				android:orientation="vertical">

				<ImageView
						android:src="@drawable/star0"
						android:id="@+id/ivStars"
						android:layout_width="150dp"
						android:layout_height="wrap_content"
						android:layout_marginBottom="20dp" />

				<RelativeLayout
						android:id="@+id/rlBuyStars"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="20dp"
						android:clickable="true"
						android:background="@drawable/donate_button">
						<TextView
								android:id="@+id/tvBuyYour"
								android:text="@string/BuyYour"
								android:layout_alignParentTop="true"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textColor="@color/star_yellow"
								style="@style/text_h3" />
						<TextView
								android:id="@+id/tvNumberedStar"
								android:text="@string/FirstStar"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginLeft="10dp"
								android:layout_marginTop="10dp"
								style="@style/text_h3"
								android:textAppearance="?android:attr/textAppearanceMedium" />
				</RelativeLayout>

				<RelativeLayout
						android:id="@+id/rlBuyPremium"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="20dp"
						android:clickable="true"
						android:background="@drawable/donate_button">
						<TextView
								android:id="@+id/tvBecomeA"
								android:text="@string/BecomeA"
								android:layout_alignParentTop="true"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:textColor="@color/star_yellow"
								style="@style/text_h3" />
						<TextView
								android:id="@+id/tvPremiumUser"
								android:text="@string/PremiumUser"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginLeft="10dp"
								android:layout_marginTop="10dp"
								style="@style/text_h3"
								android:textAppearance="?android:attr/textAppearanceMedium" />
				</RelativeLayout>
		</LinearLayout>


		<ScrollView
				android:id="@+id/screen_confirm"
				android:fadeScrollbars="false"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:visibility="gone"
				android:layout_weight="1">
				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="0dp"
						android:orientation="vertical">

						<TextView
								android:id="@+id/text"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:layout_gravity="center_vertical|center_horizontal"
								style="@style/text_h1"
								android:layout_marginTop="10dip"
								android:layout_marginBottom="10dip"
								android:gravity="top|center_horizontal"
								android:textAppearance="?android:attr/textAppearanceMedium" />
				</LinearLayout>
		</ScrollView>

		<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:divider="?android:attr/dividerHorizontal"
				android:showDividers="middle"
				android:id="@+id/screen_buttons">
				<View
						android:layout_width="wrap_content"
						android:layout_height="3dp" />
				<LinearLayout
						style="?android:attr/buttonBarStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal">
						<Button
								android:id="@+id/btnNoInstall"
								style="?android:attr/buttonBarButtonStyle"
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:text="@string/btnNoInstall" />
						<Button
								android:id="@+id/btnYesNoReboot"
								style="?android:attr/buttonBarButtonStyle"
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:text="@string/btnYesNoReboot" />
						<Button
								android:id="@+id/btnYesAndReboot"
								style="?android:attr/buttonBarButtonStyle"
								android:layout_width="0dp"
								android:layout_height="wrap_content"
								android:layout_weight="1"
								android:text="@string/btnYesAndReboot" />
				</LinearLayout>
		</LinearLayout>
</LinearLayout>