<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:padding="4dip"
		android:gravity="center_horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<TextView
								android:id="@+id/tvConfigExplanation"
								android:layout_width="wrap_content"
								android:layout_height="0dip"
								android:layout_weight="1"
								android:layout_gravity="center_vertical|center_horizontal"
								style="@style/text_h1"
								android:layout_marginTop="10dip"
								android:layout_marginBottom="10dip"
								android:gravity="top|center_horizontal"
								android:textAppearance="?android:attr/textAppearanceMedium" />

		<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<SeekBar
						android:id="@+id/sbDPIslider"
						android:layout_width="300dip"
						android:layout_height="30dip"
						android:layout_centerHorizontal="true"

						android:layout_marginLeft="10dip"
						android:layout_marginRight="10dip"
						android:layout_marginTop="10dip"
						android:max="7"
						android:progress="7" />

				<TextView
						android:id="@+id/TextViewL"
						android:layout_below="@id/sbDPIslider"
						android:layout_alignParentLeft="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dip"
						android:text="@string/SliderTweak" />
				<TextView
						android:id="@+id/TextViewH"
						android:layout_below="@id/sbDPIslider"
						android:layout_alignParentRight="true"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="10dip"
						android:text="@string/SliderDefault" />
		</RelativeLayout>

		<LinearLayout
	    android:orientation="vertical" 		
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content"
	    android:divider="?android:attr/dividerHorizontal"
	    android:showDividers="middle" >

		<View
		    android:layout_width="wrap_content"
		    android:layout_height="30dp" />
        
	    <LinearLayout
		    style="?android:attr/buttonBarStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >

		    <Button
		        android:id="@+id/btnCancelChangeConfig"
		        style="?android:attr/buttonBarButtonStyle"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/CancelButton" />
		    
		    <Button
		        android:id="@+id/btnDoChangeConfig"
		        style="?android:attr/buttonBarButtonStyle"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/ApplyButton" />

		</LinearLayout>

	</LinearLayout>

</LinearLayout>